--- a/pnote/test2.qmd
+++ b/pnote/test2.qmd
@@ -1,5 +1,5 @@
 ---
-title: "Exploration 2 :: Pyramid Chart"
+title: "Exploration 2 - Pyramid Chart"
 editor: visual
 date:  28 Dec 2022
 code-copy: true
